--- a/src/html/views/9-page.html
+++ b/src/html/views/9-page.html
@@ -7,82 +7,87 @@ title: "Розыгрыш конкурсов | ЛК | Мои аукционы"
 <section class="info">
     <div class="box">
         <div class="info-layout">
-            <div class="sidebar">
+            <div class="sidebar sidebar_l3">
                 <div class="sidebar-item">
-                    <a class="sidebar-item_link active" href="#">Описание</a>
+                    <a class="nav-link active l-icon-m l-icon-m_auction" href="#">Мои аукционы</a>
                 </div>
                 <div class="sidebar-item">
-                    <a class="sidebar-item_link active" href="#">Описание 2</a>
+                    <a class="nav-link l-icon-m l-icon-m_balance" href="#">Баланс</a>
                 </div>
                 <div class="sidebar-item">
-                    <a class="sidebar-item_link active" href="#">Описание 3</a>
+                    <a class="nav-link l-icon-m l-icon-m_profile" href="#">Профиль</a>
+                </div>
+                <div class="sidebar-item">
+                    <a class="nav-link l-icon-m l-icon-m_question" href="#">Вопрос</a>
                 </div>
             </div>
             <div class="info-content">
-                <div id="accordion">
-                    <div class="card">
-                        <div class="card-header" id="headingOne">
-                            <h5 class="mb-0">
-                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Разворачиваемая панель #1
-                                </button>
-                            </h5>
-                        </div>
 
-                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                            <div class="card-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                <div class="auction c-list-drop question">
+                    <div class="l-tab active">
+                        <h2 class="auction-title">Активные аукционы</h2>
+                        <div class="question-icon"></div>
+                    </div>
+                    <div class="question-content answer">
+                        <div class="show-list">
+
+                            <div class="auction-fix l-scrollbar">
+                                <div class="auction-content">
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                </div>
                             </div>
+
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="card-header" id="headingTwo">
-                            <h5 class="mb-0">
-                                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Разворачиваемая панель #2
-                                </button>
-                            </h5>
-                        </div>
-                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                            <div class="card-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                            </div>
-                        </div>
+                </div>
+                <div class="auction c-list-drop question">
+                    <div class="l-tab">
+                        <h2 class="auction-title">Завершенные аукционы</h2>
+                        <div class="question-icon"></div>
                     </div>
-                    <div class="card">
-                        <div class="card-header" id="headingThree">
-                            <h5 class="mb-0">
-                                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Разворачиваемая панель #3
-                                </button>
-                            </h5>
-                        </div>
-                        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                            <div class="card-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <div class="question-content answer" style="display: none;">
+                        <div class="show-list">
+                            <div class="auction-fix l-scrollbar">
+                                <div class="auction-content">
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
             <div class="info-right-sidebar">
-                <div id="accordion2">
-                    <div class="card">
-                        <div class="card-header" id="headingOne2">
-                            <h5 class="mb-0">
-                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne2" aria-expanded="true" aria-controls="collapseOne2">
-                                    Разворачиваемая панель #1
-                                </button>
-                            </h5>
-                        </div>
 
-                        <div id="collapseOne2" class="collapse show" aria-labelledby="headingOne2" data-parent="#accordion">
-                            <div class="card-body">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+
+                <div class="auction c-list-drop">
+                    <div class="auction-block-head">
+                        <h2 class="auction-title">Выйгрыш</h2>
+                    </div>
+                    <div class="question-content">
+                        <div class="show-list">
+                            <div class="auction-fix l-scrollbar">
+                                <div class="auction-box">
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                    <%= _.template(require('./../includes/products/product.html').default)(data) %>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
 
 
