--- a/src/scss/pages/_info.scss
+++ b/src/scss/pages/_info.scss
@@ -34,6 +34,19 @@
       max-width: 438px;
       margin-right: 42px;
     }
+    &_l3 {
+      max-width: 220px;
+      margin-right: 20px;
+    }
+    &-item {
+      width: 100%;
+      text-align: center;
+
+
+      &:not(:last-child){
+        margin-bottom: 8px;
+      }
+    }
     .nav-item {
       display: block;
       width: 100%;
@@ -57,9 +70,17 @@
         color: #FFFFFF;
       }
     }
+    &_l3 {
+      .nav-link {
+        font-size: 18px;
+        line-height: 21px;
+        text-align: left;
+        padding-left: 48px;
+      }
+    }
   }
   &-right-sidebar {
-    max-width: 200px;
+    max-width: 320px;
     width: 100%;
     margin-left: 20px;
     transition: .3s;
