--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@
 @import "blocks/articles";
 @import "blocks/question";
 @import "blocks/forms/upload";
+@import "blocks/auctions";
 
 //Слои
 @import "layers/header";
