--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -40,16 +40,20 @@ title: "Розыгрыш конкурсов | Главная"
             <li>
                 <a href="7-page.html">Страница "Помощь"</a>
             </li>
-
-
-
+            <li>
+                <a href="8-page.html">Страница "О нас"</a>
+            </li>
             <li>
                 <a href="9-page.html">ЛК | Мои аукционы</a>
-<!--                <ul>-->
-<!--                    <li class="child">-->
-<!--                        <a href="1-1-home-win-repost.html">Главная с модальным окном (Выиграть за репост!)</a>-->
-<!--                    </li>-->
-<!--                </ul>-->
+            </li>
+            <li>
+                <a href="10-page.html">ЛК | Баланс</a>
+            </li>
+            <li>
+                <a href="11-page.html">ЛК | Профиль</a>
+            </li>
+            <li>
+                <a href="12-page.html">ЛК | Вопрос</a>
             </li>
         </ul>
     </div>
