--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,7 @@
 @import "blocks/question";
 @import "blocks/forms/upload";
 @import "blocks/auctions";
+@import "blocks/c-card";
 
 //Слои
 @import "layers/header";
