--- a/src/scss/blocks/_question.scss
+++ b/src/scss/blocks/_question.scss
@@ -35,5 +35,16 @@
     line-height: 28px;
     padding: 18px 32px 34px 56px;
   }
-
+  @media (max-width: 768px) {
+    .l-tab {
+      padding: 10px 20px 8px;
+    }
+    &-title {
+      font-size: 20px;
+      line-height: 26px;
+    }
+    &-content {
+      padding: 18px 20px 20px;
+    }
+  }
 }
