--- a/src/scss/blocks/forms/_form.scss
+++ b/src/scss/blocks/forms/_form.scss
@@ -13,4 +13,15 @@
     max-width: 170px;
     width: 100%;
   }
+  @media (max-width: 768px) {
+    &-control {
+      &-flex {
+        display: block;
+      }
+    }
+    &-label {
+      font-size: 16px;
+      line-height: 28px;
+    }
+  }
 }
