--- a/src/html/views/11-page.html
+++ b/src/html/views/11-page.html
@@ -4,7 +4,7 @@ title: "Розыгрыш конкурсов | ЛК | Профиль"
 <%= _.template(require('./../includes/header.html').default)(data) %>
 <main role="main">
 
-<section class="info">
+<section class="info info_l1">
     <div class="box">
         <div class="info-layout">
             <div class="sidebar sidebar_l3">
