--- a/src/scss/blocks/forms/_upload.scss
+++ b/src/scss/blocks/forms/_upload.scss
@@ -8,7 +8,6 @@
       margin-right: 20px;
     }
   }
-
   &-warning {
     font-size: 18px;
     line-height: 20px;
@@ -43,9 +42,6 @@
     max-width: 170px;
     transition: .3s;
   }
-  &-content {
-
-  }
   &-preview {
     display: flex;
     align-items: end;
@@ -78,8 +74,25 @@
         }
       }
     }
-
-
+  }
+  @media (max-width: 768px) {
+    &-btn {
+      display: block;
+      .l-btn {
+        margin-right: 0;
+        width: 100%;
+        margin-bottom: 12px;
+      }
+    }
+    &-preview {
+      display: block;
+      &-box {
+        &:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 12px;
+        }
+      }
+    }
   }
 
 }
