--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,6 +26,8 @@
 @import "blocks/forms/upload";
 @import "blocks/auctions";
 @import "blocks/c-card";
+@import "pages/settings";
+@import "blocks/collapse";
 
 //Слои
 @import "layers/header";
