--- a/src/scss/blocks/forms/_select.scss
+++ b/src/scss/blocks/forms/_select.scss
@@ -140,3 +140,155 @@
   background: #f9f9f9;
 }
 
+.l-select {
+  position: relative;
+  select {
+    min-width: 180px;
+  }
+}
+
+
+.l-dropdown {
+  --max-scroll: 8;
+  --text: #838383;
+  --border: #2F3545;
+  --borderActive: #23C4F8;
+  --background: #dde7ff;
+  --arrow: #6C7486;
+  --arrowActive: #E4ECFA;
+  --listText: #99A3BA;
+  --listBackground: #F5F9FF;
+  --listActive: #E4ECFA;
+  --listTextActive: #6C7486;
+  --listBorder: none;
+  --textFilled: #99A3BA;
+  width: 190px;
+  position: relative;
+  select {
+    display: none;
+  }
+  & > span {
+    cursor: pointer;
+    padding: 9px 16px;
+    border-radius: 6px;
+    display: block;
+    position: relative;
+    color: var(--text);
+    background: var(--background);
+    transition: all .3s ease;
+    &:before,
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 8px;
+      height: 2px;
+      border-radius: 1px;
+      top: 50%;
+      right: 15px;
+      background: var(--arrow);
+      transition: all .3s ease;
+    }
+    &:before {
+      margin-right: 4px;
+      transform: scale(.96, .8) rotate(50deg);
+    }
+    &:after {
+      transform: scale(.96, .8) rotate(-50deg);
+    }
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    max-height: calc(var(--max-scroll) * 42px);
+    top: 42px;
+    left: 0;
+    z-index: 1;
+    right: 0;
+    background: var(--listBackground);
+    border-radius: 6px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transform-origin: 0 0;
+    transition: opacity .2s ease, visibility .2s ease, transform .3s cubic-bezier(.4, .6, .5, 1.32);
+    transform: scale(.8) translate(0, 4px);
+    border: 1px solid var(--listBorder);
+    li {
+      opacity: 0;
+      transform: translate(6px, 0);
+      transition: all .3s ease;
+      a {
+        cursor: pointer;
+        display: block;
+        padding: 10px 16px;
+        color: var(--listText);
+        text-decoration: none;
+        outline: none;
+        position: relative;
+        transition: all .3s ease;
+        &:hover {
+          color: var(--listTextActive);
+        }
+      }
+      &.active {
+        a {
+          color: var(--listTextActive);
+          background: var(--listActive);
+        }
+      }
+      &:first-child {
+        a {
+          border-radius: 6px 6px 0 0;
+        }
+      }
+      &:last-child {
+        a {
+          border-radius: 0 0 6px 6px;
+        }
+      }
+    }
+  }
+  &.filled {
+    & > span {
+      color: var(--textFilled);
+      height: 40px;
+    }
+  }
+  &.open {
+    & > span {
+      border-color: var(--borderActive);
+      &:before,
+      &:after {
+
+      }
+      &:before {
+        transform: scale(.96, .8) rotate(-50deg);
+      }
+      &:after {
+        transform: scale(.96, .8) rotate(50deg);
+      }
+    }
+    ul {
+      opacity: 1;
+      visibility: visible;
+      transform: scale(1) translate(0, 12px);
+      transition: opacity .3s ease, visibility .3s ease, transform .3s cubic-bezier(.4, .6, .5, 1.32);
+      li {
+        opacity: 1;
+        transform: translate(0, 0);
+        $i: 1;
+        @while $i <= 10 {
+          $delay: $i * 80;
+          &:nth-child(#{$i}) {
+            transition-delay: #{$delay}ms;
+          }
+          $i: $i + 1;
+        }
+      }
+    }
+  }
+}
