--- a/src/html/views/11-2-page.html
+++ b/src/html/views/11-2-page.html
@@ -53,6 +53,7 @@ title: "Розыгрыш конкурсов | ЛК | Профиль"
 
 
                                 <div class="l-setting-btn">
+                                    <div class="l-setting-msg">На указанный E-mail отправлено письмо с подтверждением</div>
                                     <input type="submit" class="l-btn l-btn-green" value="Сохранить">
                                 </div>
 
