--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -51,11 +51,48 @@ title: "Розыгрыш конкурсов | Главная"
             </li>
             <li>
                 <a href="11-page.html">ЛК | Профиль</a>
+                <ul>
+                    <li class="child">
+                        <a href="11-1-page.html">Профиль - Ошибки</a>
+                    </li>
+                    <li class="child">
+                        <a href="11-2-page.html">Профиль - Успех</a>
+                    </li>
+                </ul>
             </li>
             <li>
                 <a href="12-page.html">ЛК | Вопрос</a>
             </li>
+
+            <hr />
+
+            <li>
+                <a href="1-2-home-auth.html">Вход в ЛК</a>
+                <ul>
+                    <li class="child">
+                        <a href="1-3-home-auth.html">Вход в ЛК | Ошибка</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="1-4-home-recovery.html">Востановление пароля</a>
+                <ul>
+                    <li class="child">
+                        <a href="1-5-home-recovery.html">Востановление пароля | Ошибка</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="1-6-home-registration.html">Регистрация</a>
+                <ul>
+                    <li class="child">
+                        <a href="1-7-home-registration.html">Регистрация | Ошибка</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
+
+
     </div>
 
 </main>
