--- a/src/scss/pages/_settings.scss
+++ b/src/scss/pages/_settings.scss
@@ -15,11 +15,33 @@
 }
 .l-setting {
   &-btn {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     text-align: right;
     padding: 4px 28px 20px 20px;
     transition: .3s;
     .l-btn {
       min-width: 170px;
+    }
+  }
+  &-msg {
+    font-size: 14px;
+    line-height: 16px;
+    color: #7DBE2A;
+    position: relative;
+    padding-right: 32px;
+    &:before {
+      content: '';
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.00065 1.33333C4.31732 1.33333 1.33398 4.31666 1.33398 8C1.33398 11.68 4.31732 14.6667 8.00065 14.6667C11.6807 14.6667 14.6673 11.68 14.6673 8C14.6673 4.31666 11.6807 1.33333 8.00065 1.33333ZM6.66732 11.3333L3.33398 8L4.27732 7.05666L6.66732 9.44666L11.724 4.39L12.6673 5.33333L6.66732 11.3333Z' fill='%237DBE2A'/%3E%3C/svg%3E%0A");
+      background-size: cover;
+      top: 0;
+      right: 8px;
+      bottom: 0;
+      margin: auto;
     }
   }
   .l-form-control-flex {
@@ -40,7 +62,19 @@
     margin-right: 6px;
     transition: .3s;
   }
-  .l-select {
-
+  .l-select,
+  .l-input {
+    color: #A3A3A3;
   }
+  .l-input {
+    padding: 10px 12px;
+  }
+  .half-width {
+    max-width: 190px;
+  }
+  .l-textarea {
+    padding: 9px 22px 20px 12px;
+    min-height: 157px;
+  }
+
 }
