--- a/src/html/views/1-2-home-auth.html
+++ b/src/html/views/1-2-home-auth.html
@@ -22,7 +22,8 @@ title: "Розыгрыш конкурсов | Главная"
                             <div class="l-form-control-flex">
                                 <div class="l-form-label">E-mail:</div>
                                 <div class="l-form-control-box">
-                                    <input type="text" class="l-input l-input_l1 l-input-place_l1" name="email" value="">
+                                    <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-email" name="email" value="">
+                                    <div class="l-form-control-msg">Введите правильно адрес электронной почты</div>
                                 </div>
                             </div>
                             <div class="l-form-control-flex">
@@ -32,6 +33,7 @@ title: "Розыгрыш конкурсов | Главная"
                                     <div class="l-form-control-msg"></div>
                                 </div>
                             </div>
+<!--                            <div class="l-modal-auth-msg">Такого пользователя нет, или введены не верные данные</div>-->
                             <div class="l-modal-auth-btn">
                                 <input type="submit" class="l-btn l-btn-green" value="Войти">
                             </div>
