--- a/src/scss/blocks/forms/_form.scss
+++ b/src/scss/blocks/forms/_form.scss
@@ -69,6 +69,11 @@
     background: #DF6767;
     color: #FFFFFF !important;
   }
+  &.is-not {
+    .l-form-control-msg {
+      display: none;
+    }
+  }
 }
 
 .form-reg {
