--- a/src/html/views/1-3-home-auth.html
+++ b/src/html/views/1-3-home-auth.html
@@ -19,10 +19,11 @@ title: "Розыгрыш конкурсов | Главная"
                 <div class="modal-body">
                     <div class="auth-form">
                         <form>
-                            <div class="l-form-control-flex is-error">
+                            <div class="l-form-control-flex is-error is-not">
                                 <div class="l-form-label">E-mail:</div>
                                 <div class="l-form-control-box">
                                     <input type="text" class="l-input l-input_l1 l-input-place_l1" name="email" value="Test@mail.com">
+                                    <div class="l-form-control-msg">Введите правильно адрес электронной почты</div>
                                 </div>
                             </div>
                             <div class="l-form-control-flex is-error">
