--- a/src/html/views/1-6-home-registration.html
+++ b/src/html/views/1-6-home-registration.html
@@ -22,25 +22,28 @@ title: "Розыгрыш конкурсов | Главная"
                             <div class="l-form-control-flex">
                                 <div class="l-form-label">E-mail: *</div>
                                 <div class="l-form-control-box">
-                                    <input type="text" class="l-input l-input_l1 l-input-place_l1" name="email">
+                                    <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-email" name="email">
+                                    <div class="l-form-control-msg">Введите правильно адрес электронной почты</div>
                                 </div>
                             </div>
                             <div class="l-form-control-flex">
                                 <div class="l-form-label">Никнейм: *</div>
                                 <div class="l-form-control-box">
-                                    <input type="text" class="l-input l-input_l1 l-input-place_l1" name="login">
+                                    <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-string" name="login">
+                                    <div class="l-form-control-msg">Введите никнейм</div>
                                 </div>
                             </div>
                             <div class="l-form-control-flex">
                                 <div class="l-form-label">Пароль: *</div>
                                 <div class="l-form-control-box">
-                                    <input type="password" class="l-input l-input_l1 l-input-place_l1" name="password">
+                                    <input type="password" class="l-input l-input_l1 l-input-place_l1 valid-pass" name="password">
                                 </div>
                             </div>
                             <div class="l-form-control-flex">
                                 <div class="l-form-label">Повторите пароль: *</div>
                                 <div class="l-form-control-box">
-                                    <input type="password" class="l-input l-input_l1 l-input-place_l1" name="rePassword">
+                                    <input type="password" class="l-input l-input_l1 l-input-place_l1 valid-re-pass" name="rePassword">
+                                    <div class="l-form-control-msg">Пароли не совпадают</div>
                                 </div>
                             </div>
                             <div class="form-reg-checkbox">
