--- a/src/html/views/1-7-home-registration.html
+++ b/src/html/views/1-7-home-registration.html
@@ -22,26 +22,26 @@ title: "Розыгрыш конкурсов | Главная"
                             <div class="l-form-control-flex is-error">
                                 <div class="l-form-label">E-mail: *</div>
                                 <div class="l-form-control-box">
-                                    <input type="text" class="l-input l-input_l1 l-input-place_l1" name="email" value="Test@mail.com">
+                                    <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-email" name="email" value="Test@mail.com">
                                     <div class="l-form-control-msg">Введите правильно адрес электронной почты</div>
                                 </div>
                             </div>
                             <div class="l-form-control-flex">
                                 <div class="l-form-label">Никнейм: *</div>
                                 <div class="l-form-control-box">
-                                    <input type="text" class="l-input l-input_l1 l-input-place_l1" name="login" value="Никнейм">
+                                    <input type="text" class="l-input l-input_l1 l-input-place_l1 valid-string" name="login" value="Никнейм">
                                 </div>
                             </div>
                             <div class="l-form-control-flex is-error">
                                 <div class="l-form-label">Пароль: *</div>
                                 <div class="l-form-control-box">
-                                    <input type="password" class="l-input l-input_l1 l-input-place_l1" name="password" value="12345677">
+                                    <input type="password" class="l-input l-input_l1 l-input-place_l1 valid-pass" name="password" value="12345677">
                                 </div>
                             </div>
                             <div class="l-form-control-flex is-error">
                                 <div class="l-form-label">Повторите пароль: *</div>
                                 <div class="l-form-control-box">
-                                    <input type="password" class="l-input l-input_l1 l-input-place_l1" name="rePassword" value="12345679">
+                                    <input type="password" class="l-input l-input_l1 l-input-place_l1 valid-re-pass" name="rePassword" value="12345679">
                                     <div class="l-form-control-msg">Пароли не совпадают</div>
                                 </div>
                             </div>
